# obsidian-carryover-todos

./: .gitignore  Cargo.toml  README.md  build.sh
src/: helpers.rs  logger.rs  main.rs  test.rs
test/vault/: 2023-09-01.md  2023-09-02.md  2023-09-03.md
test/vault/correct/: 2023-09-01.md  2023-09-02.md  2023-09-03.md
