[package]
name = "carryover_todos"
authors = "Valentin Rogg @ v-rogg"
version = "0.1.3"
description = "Rust script for the Templater Obsidian plugin to carryover uncompleted To-dos from my vault's daily notes."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1.9"